#22 Filmstrip View Additional changes for viewers to properly support filmstrip view - Yui drop down menus in PdfJs not opening properly (thumbnail for filmstrip css reset yuk). Fixed - Added additional viewers to add margins for thumbnail bar (visible/not visible). Now the viewer is not hidden under top grey overlay. - Fixed viewer height calculation to work with filmstrip view - Updated Prettify viewer to use height calculation to make best possible use of viewer area.

--- a/source/web/extras/components/preview/viewer-common.css
+++ b/source/web/extras/components/preview/viewer-common.css
@@ -72,12 +72,32 @@
    padding-right: 5px;
 }
 
+/* Reset yui button in filmstrip */
+.previewer .yui-overlay ul
+{
+    padding: 0 !important;
+    margin-left: 0 !important;
+    list-style-position: inside !important;
+}
+
+.previewer .yui-overlay li
+{
+    list-style: none !important;
+    overflow-y: visible !important;
+    overflow-x: visible !important;
+    float: none;
+}
+
 /* Overrides for filmstrip view */
-.alf-filmstrip .web-preview .previewer.Embed, .alf-filmstrip .web-preview .previewer.PdfJs
+.alf-filmstrip .web-preview .previewer.Embed,
+.alf-filmstrip .web-preview .previewer.PdfJs,
+.alf-filmstrip .web-preview .previewer.Prettify
 {
    margin-top: 47px;
 }
-.alf-filmstrip-content-only .web-preview .previewer.Embed, .alf-filmstrip-content-only .web-preview .previewer.PdfJs
+.alf-filmstrip-content-only .web-preview .previewer.Embed,
+.alf-filmstrip-content-only .web-preview .previewer.PdfJs,
+.alf-filmstrip-content-only .web-preview .previewer.Prettify
 {
     margin-top: 1px;
 }
